<resources>
    <string name="app_name">JavaAndroidPractice</string>
    <string name="game_now">GAME NOW</string>
    <string name="up_with_email">Up with Email</string>
    <string name="or">OR</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="trivia">Trivia</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
</resources>